--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,24 @@ spring.freemarker.settings.number_format=0.##
 # spring.freemarker.settings.output_format=HTML
 
 # Connexion à la base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/cinema
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://bdb48b0278c3ac:5830e643@eu-cdbr-west-01.cleardb.com/heroku_870e10a012b1108?reconnect=true
+spring.datasource.username=bdb48b0278c3ac
+spring.datasource.password=5830e643
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/cinema
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#h2 DB
 #spring.datasource.url=jdbc:h2:file:c:/db/cinema;AUTO_SERVER=TRUE
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.initialization-mode=always
-spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=never
+#spring.h2.console.enabled=true
 
 # Suppression de la page white label
 #https://www.baeldung.com/spring-boot-custom-error-page
